--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       ],
       "SupportedInMultiActions": true,
       "Tooltip": "This action toggles a switch",
-      "UUID": "com.ripnet.hubitat.toggleswitch.action"
+      "UUID": "com.spectre3ooo.hubitat.toggleswitch.action"
     },
     {
       "Icon": "resources/img/toggle",
@@ -28,7 +28,7 @@
       ],
       "SupportedInMultiActions": true,
       "Tooltip": "This action sets the state of a switch",
-      "UUID": "com.ripnet.hubitat.setswitch.action"
+      "UUID": "com.spectre3ooo.hubitat.setswitch.action"
     },
     {
       "Icon": "resources/img/toggle",
@@ -38,21 +38,66 @@
           "Image": "resources/img/light_gray",
           "TitleAlignment": "bottom",
           "FontSize": "12",
-          "Title": "Switch"
+          "Title": ""
         }
       ],
       "SupportedInMultiActions": true,
       "Tooltip": "This action sets the state of a switch",
-      "UUID": "com.ripnet.hubitat.multidimmer.action"
+      "UUID": "com.spectre3ooo.hubitat.multidimmer.action"
+    },
+    {
+      "Icon": "resources/img/fan-up",
+      "Name": "Increase Fan Speed",
+      "States": [
+        {
+          "Image": "resources/img/fan-up",
+          "TitleAlignment": "bottom",
+          "FontSize": "12",
+          "Title": ""
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "Tooltip": "This action increases the speed of a fan",
+      "UUID": "com.spectre3ooo.hubitat.speedup.action"
+    },
+    {
+      "Icon": "resources/img/fan-down",
+      "Name": "Decrease Fan Speed",
+      "States": [
+        {
+          "Image": "resources/img/fan-down",
+          "TitleAlignment": "bottom",
+          "FontSize": "12",
+          "Title": ""
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "Tooltip": "This action decreases the speed of a fan",
+      "UUID": "com.spectre3ooo.hubitat.speeddown.action"
+    },
+    {
+      "Icon": "resources/img/fan-0",
+      "Name": "Toggle Fan",
+      "States": [
+        {
+          "Image": "resources/img/fan-0",
+          "TitleAlignment": "middle",
+          "FontSize": "12",
+          "Title": "0"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "Tooltip": "This action toggles a fan",
+      "UUID": "com.spectre3ooo.hubitat.togglefan.action"
     }
   ],
   "SDKVersion": 2,
-  "Author": "ripnet",
+  "Author": "spectre3ooo",
   "CodePath": "plugin/index.html",
   "Description": "This plugin allows Stream Deck to interact with Hubitat via the Maker API",
   "Name": "Hubitat Integration",
   "Icon": "resources/img/hubitat_logo",
-  "URL": "https://github.com/ripnet/streamdeck-hubitat",
+  "URL": "https://github.com/spectre3ooo/streamdeck-hubitat",
   "PropertyInspectorPath": "pi/hubitat_pi.html",
   "Version": "1.8",
   "Category": "Hubitat",
